# my_project

./: .coverage  .env_template  .gitignore  README.md  mylog.txt  pyproject.toml
additionally_task/: list_strings.py  summary.py
news_feature/: processing.py
src/: decorators.py  external_api.py  generators.py  logger.py  main.py  mask_card_1.py  mask_card_2.py  masks.py  processing.py  transaction.py  utils.py  widget.py
tests/: conftest.py  mylog.txt  test_decorators.py  test_external_api.py  test_generators.py  test_processing.py  test_transaction.py  test_utils.py  test_widget.py
