[tool.poetry]
name = "my-projet"
version = "0.1.0"
description = ""
authors = ["Kostyan <k89161273297@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.lint.dependencies]
flake8 = "^7.0.0"
black = "^24.4.2"
isort = "^5.13.2"
mypy = "^1.10.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.mypy]
warn_return_any = true
check_untyped_defs = true


[tool.black]
line-length = 119


[tool.isort]
line_length = 119